Rename explorer parent dir and attempt to add theme

--- a/src/styles/tooltip.scss
+++ b/src/styles/tooltip.scss
@@ -2,48 +2,45 @@
   z-index: 5000;
   border-radius: 0;
   margin-left: 16px;
-
   .arrow {
     display: none;
-    // fill: #818967;
-    // stroke: #818967;
   }
   .tooltip-inner {
-    background-color: #2c390b; // rgba(0, 0, 0, 0.85);
+    background-color: #2c390b;
     border-radius: 0;
-    font-size: 1.4rem; // 12px;
+    font-size: 1.4rem;
     font-family: halyard-text;
     padding: 0.8rem;
   }
 }
-.tooltip-custom-share {
-  opacity: 1;
-  .tooltip {
-    opacity: 1;
-    .tooltip-inner {
-      border-radius: 2px;
-      background-color: $white;
-      box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.05);
-      text-align: left;
-      opacity: 1;
-      padding: 1rem;
-      .item {
-        margin-bottom: 0.4rem;
-        &:last-of-type {
-          margin-bottom: 0;
-        }
-        span {
-          font-family: halyard-text;
-          font-weight: 300;
-          font-size: 1.3rem;
-          line-height: 1.5rem;
-        }
-        svg {
-          width: 14px;
-          height: 14px;
-          margin-right: 1rem;
-        }
-      }
-    }
-  }
-}
+// .tooltip-custom-share {
+//   opacity: 1;
+//   .tooltip {
+//     opacity: 1;
+//     .tooltip-inner {
+//       border-radius: 2px;
+//       background-color: $white;
+//       box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.05);
+//       text-align: left;
+//       opacity: 1;
+//       padding: 1rem;
+//       .item {
+//         margin-bottom: 0.4rem;
+//         &:last-of-type {
+//           margin-bottom: 0;
+//         }
+//         span {
+//           font-family: halyard-text;
+//           font-weight: 300;
+//           font-size: 1.3rem;
+//           line-height: 1.5rem;
+//         }
+//         svg {
+//           width: 14px;
+//           height: 14px;
+//           margin-right: 1rem;
+//         }
+//       }
+//     }
+//   }
+// }
