Test implement emotion, work on reducing scss and bootstrap import

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -298,17 +298,17 @@ hr {
   line-height: 1.5;
 }
 
-.react-autosuggest__suggestion--highlighted {
-  background-color: var(--highlight-background);
-}
+// .react-autosuggest__suggestion--highlighted {
+//   background-color: var(--highlight-background);
+// }
 
-.ais-Highlight-highlighted {
-  background-color: transparent;
-  font-weight: normal;
-  font-family: var(--body-bold);
-}
-
-.ais-Highlight-nonHighlighted {
-  color: #000;
-  font-weight: normal;
-}
+// .ais-Highlight-highlighted {
+//   background-color: transparent;
+//   font-weight: normal;
+//   font-family: var(--body-bold);
+// }
+//
+// .ais-Highlight-nonHighlighted {
+//   color: #000;
+//   font-weight: normal;
+// }
