--- a/src/styles/Layout.scss
+++ b/src/styles/Layout.scss
@@ -21,12 +21,13 @@ $spacer: 0.8rem;
     line-height: 21px;
     color: #08131f;
   }
-  .menu-icon {
-    width: 20px;
-    height: 9px;
-    margin-right: 4px;
-    background-image: url('./images/menu-icon.svg');
-  }
+  // .menu-icon {
+  //   display: inline-block;
+  //   width: 20px;
+  //   height: 9px;
+  //   margin-right: 4px;
+  //   background-image: url('./images/menu-icon.svg');
+  // }
   .header {
     h1 {
       margin-left: 16px;
