--- a/src/styles/tooltip.scss
+++ b/src/styles/tooltip.scss
@@ -1,18 +1,18 @@
-.tooltip {
-  z-index: 5000;
-  border-radius: 0;
-  margin-left: 16px;
-  .arrow {
-    display: none;
-  }
-  .tooltip-inner {
-    background-color: #2c390b;
-    border-radius: 0;
-    font-size: 1.4rem;
-    font-family: halyard-text;
-    padding: 0.8rem;
-  }
-}
+// .tooltip {
+//   z-index: 5000;
+//   border-radius: 0;
+//   margin-left: 16px;
+//   .arrow {
+//     display: none;
+//   }
+//   .tooltip-inner {
+//     background-color: #2c390b;
+//     border-radius: 0;
+//     font-size: 1.4rem;
+//     font-family: halyard-text;
+//     padding: 0.8rem;
+//   }
+// }
 // .tooltip-custom-share {
 //   opacity: 1;
 //   .tooltip {
