--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,7 +9,7 @@ html {
   font-size: 62.5%; // sets sitewide font sizes based on user's font size in browser
 }
 
-// @import '~bootstrap/scss/bootstrap.scss';
+@import '~bootstrap/scss/bootstrap.scss';
 
 // @import 'breakpoints';
 // @import 'mixins';
