Updates embed and moves a lot of general css into components

--- a/src/styles/ControlPanel.scss
+++ b/src/styles/ControlPanel.scss
@@ -1,6 +1,6 @@
-.canvas {
-  position: relative;
-}
+// .canvas {
+//   position: relative;
+// }
 
 /* Extra small devices (phones, 767px and down) */
 .layout-control-panel {
