--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,7 +17,7 @@ html {
 
 @import 'images/logos';
 // Core components
-@import 'Canvas';
+// @import 'Canvas';
 // Explorer components
 @import 'App';
 @import 'Layout';
