--- a/src/styles/Map.scss
+++ b/src/styles/Map.scss
@@ -1,18 +1,18 @@
 .overlays {
   .map__zoom {
-    .mapboxgl-ctrl-group {
-      box-shadow: 1px 1px 3px #ccc;
-    }
-    .btn {
-      background-color: #fff;
-      box-shadow: 1px 1px 3px #ccc;
-      border-radius: 0;
-      height: 30px;
-      width: 30px;
-      .icon {
-      }
-      // margin-bottom: 0.5rem;
-    }
+    // .mapboxgl-ctrl-group {
+    //   box-shadow: 1px 1px 3px #ccc;
+    // }
+    // .btn {
+    //   background-color: #fff;
+    //   box-shadow: 1px 1px 3px #ccc;
+    //   border-radius: 0;
+    //   height: 30px;
+    //   width: 30px;
+    //   .icon {
+    //   }
+    // margin-bottom: 0.5rem;
+    // }
     .map-reset-btn {
       svg {
         margin-left: -2px;
@@ -24,14 +24,14 @@
       }
     }
     // Explorer mapbox css overrides
-    .mapboxgl-ctrl
-      button.mapboxgl-ctrl-zoom-out
-      .mapboxgl-ctrl-icon,
-    .mapboxgl-ctrl
-      button.mapboxgl-ctrl-zoom-in
-      .mapboxgl-ctrl-icon {
-      background-image: none !important;
-    }
+    // .mapboxgl-ctrl
+    //   button.mapboxgl-ctrl-zoom-out
+    //   .mapboxgl-ctrl-icon,
+    // .mapboxgl-ctrl
+    //   button.mapboxgl-ctrl-zoom-in
+    //   .mapboxgl-ctrl-icon {
+    //   background-image: none !important;
+    // }
   }
   .custom-attribution {
     display: none;
