Updates formatting for filter panel

--- a/src/styles/PanelFilterView.scss
+++ b/src/styles/PanelFilterView.scss
@@ -4,9 +4,9 @@
   overflow: hidden;
   .map-panel-slideout-filters {
     overflow-y: hidden;
-    h3 {
-      display: none;
-    }
+    // h3 {
+    //   display: none;
+    // }
     p {
       font-family: halyard-text;
       font-weight: 200;
