--- a/src/styles/PanelFilterView.scss
+++ b/src/styles/PanelFilterView.scss
@@ -17,40 +17,65 @@
     }
     height: 100%;
     padding: 2.8rem 2rem; //1.6rem;
-    .map-panel-controls {
-      display: flex;
-      margin-bottom: 1.6rem;
-      button#button_reset_filter {
-        width: 40px;
-        font-size: 1.7rem;
-        line-height: 1;
-      }
-      .select {
-        flex-grow: 1;
-        margin-right: 1rem;
-        button {
-          width: 100%;
-          height: 40px;
-          font-size: 15px;
-          font-weight: 200;
-          color: #2c390b;
-          background-color: #fff;
-          border: 1px solid #cfd3c2;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          &.active {
-            background-color: rgba(204, 204, 204, 0.4);
-          }
+    .select {
+      flex-grow: 1;
+      margin-right: 1rem;
+      button {
+        width: 100%;
+        height: 40px;
+        font-size: 15px;
+        font-weight: 200;
+        color: #2c390b;
+        background-color: #fff;
+        border: 1px solid #cfd3c2;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        &.active {
+          background-color: rgba(204, 204, 204, 0.4);
         }
-        .dropdown-menu {
-          width: 100%;
-          button {
-            border: none;
-          }
+      }
+      .dropdown-menu {
+        width: 100%;
+        button {
+          border: none;
         }
       }
     }
+    // .map-panel-controls {
+    //   display: flex;
+    //   margin-bottom: 1.6rem;
+    //   button#button_reset_filter {
+    //     width: 40px;
+    //     font-size: 1.7rem;
+    //     line-height: 1;
+    //   }
+    // .select {
+    //   flex-grow: 1;
+    //   margin-right: 1rem;
+    //   button {
+    //     width: 100%;
+    //     height: 40px;
+    //     font-size: 15px;
+    //     font-weight: 200;
+    //     color: #2c390b;
+    //     background-color: #fff;
+    //     border: 1px solid #cfd3c2;
+    //     display: flex;
+    //     justify-content: space-between;
+    //     align-items: center;
+    //     &.active {
+    //       background-color: rgba(204, 204, 204, 0.4);
+    //     }
+    //   }
+    //   .dropdown-menu {
+    //     width: 100%;
+    //     button {
+    //       border: none;
+    //     }
+    //   }
+    // }
+    // }
     .filters-panel-parent {
       height: 100%;
       padding: 1rem 0.4rem;
