--- a/src/styles/PanelInfoView.scss
+++ b/src/styles/PanelInfoView.scss
@@ -11,7 +11,7 @@
   }
   p {
     margin: 1rem 0;
-    font-family: halyard-text;
+    @include font-gotham-book;
     font-weight: 200;
     font-size: 15px;
     line-height: 22px;
