--- a/src/styles/PanelLayerView.scss
+++ b/src/styles/PanelLayerView.scss
@@ -2,13 +2,13 @@
   // position: absolute;
   // right: 20px;
   // bottom: 30px;
-  font-family: halyard-text;
+  @include font-gotham-book;
   padding: 2.8rem 2rem;
   font-size: 1.6rem;
   font-weight: 300;
   p {
     margin: 1rem 0;
-    font-family: halyard-text;
+    @include font-gotham-book;
     font-weight: 200;
     font-size: 15px;
     line-height: 22px;
