--- a/src/styles/PopupContent.scss
+++ b/src/styles/PopupContent.scss
@@ -4,7 +4,7 @@
   width: 252px;
   border-radius: 0;
   h4 {
-    font-family: halyard-text;
+    @include font-gotham-book;
     font-size: 1.6rem;
     line-height: 2.3rem;
     color: $turtle-green;
