--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -1,7 +1,7 @@
 .modal-dialog {
   .modal-content {
     border-radius: 0;
-    font-family: halyard-text;
+    @include font-gotham-book;
     font-weight: 300;
     font-size: 1.4rem;
     line-height: 1.5;
