--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -15,6 +15,7 @@ $cod-gray: #181818;
 $dk-gray: #4b4b4b;
 $firefly: #08131f;
 $black: #000000;
+$untd-font-gray: #484e56;
 
 $logo-text-color: #8f9287;
 $tower-gray: #9dbab7;
