--- a/src/styles/PanelLayerView.scss
+++ b/src/styles/PanelLayerView.scss
@@ -1,16 +1,15 @@
 .map-panel-slideout-layers {
-  // position: absolute;
-  // right: 20px;
-  // bottom: 30px;
   @include font-gotham-book;
   padding: 2.8rem 2rem;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   font-weight: 300;
+  height: 100%;
+
   p {
     margin: 1rem 0;
     @include font-gotham-book;
     font-weight: 200;
-    font-size: 15px;
+    font-size: 14px;
     line-height: 22px;
     color: #606b44;
     margin-bottom: 0.8rem;
@@ -22,41 +21,248 @@
     line-height: 28px;
     color: #2c390b;
   }
+
+  .button-all-toggle {
+    color: $turtle-green;
+    @include font-gotham-book;
+    font-style: normal;
+    font-weight: 200;
+    font-size: 15px;
+  }
+
   .map-layer-toggle-pane {
-    // padding-top: 0.5rem;
     background-color: #fff;
-    // border-top-right-radius: 5px;
-    // border-top-left-radius: 5px;
     overflow: hidden;
-    // box-shadow: 1px 1px 2px #ccc;
     font-size: 1.4rem;
     line-height: 1.6rem;
     font-weight: 300;
-    .layer {
-      margin: 1rem 1.2rem 0 1rem;
-      label {
-        cursor: pointer;
+    height: 100%;
+
+    .layer-group-points {
+      height: 100%;
+
+      h5 {
+        svg {
+          margin-top: -6px;
+          margin-left: 4px;
+          font-size: 1.8rem;
+        }
       }
-      input {
-        margin-right: 0.35rem;
-        cursor: pointer;
-        // margin-top: 10px;
-      }
-      &:first-of-type {
-        margin-top: 2rem;
-      }
-      &:last-of-type {
-        margin-top: 1rem;
-        margin-bottom: 1.5rem;
-      }
-      svg {
-        width: 12px;
-        height: 12px;
-        margin-left: 0.35rem;
-        color: $turtle-green;
-        margin-top: -2px;
+
+      .points-group-parent {
+        height: 100%;
+        overflow-y: scroll;
+
+        .layer-group {
+          margin-bottom: 16rem;
+
+          .points-cat-toggle {
+            border: 0;
+            box-shadow: 0;
+            text-decoration: none !important;
+            font-size: 1.6rem !important;
+            color: $turtle-green;
+            padding: 0.375rem 0 0 !important;
+            &:focus,
+            &:active {
+              outline: 0;
+              box-shadow: none !important;
+              text-decoration: none !important;
+            }
+            svg {
+              margin-top: -2px;
+              margin-right: 0.6rem;
+            }
+          }
+
+          .subcat-parent {
+            margin-left: 1rem;
+          }
+
+          input {
+            margin-left: 0.5rem;
+          }
+
+          .layer {
+            display: block;
+            position: relative;
+            padding-left: 28px;
+            margin-bottom: 12px;
+            cursor: pointer;
+            // font-size: 22px;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+
+            margin: 1rem 1.2rem 0 1rem;
+
+            label {
+              cursor: pointer;
+              .icon {
+                display: inline-block;
+                width: 16px;
+                height: 16px;
+                background-size: 16px 16px;
+                background-repeat: no-repeat;
+                background-position: center;
+                margin-right: 4px;
+                &.icon-book {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/book.svg');
+                }
+                &.icon-carrot {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/carrot.svg');
+                }
+                &.icon-rec {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/rec.svg');
+                }
+                &.icon-bank {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/bank.svg');
+                }
+                &.icon-cru {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/cru.svg');
+                }
+                &.icon-cart {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/cart.svg');
+                }
+                &.icon-childcare {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/childcare.svg');
+                }
+                &.icon-community {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/community.svg');
+                }
+                &.icon-pharmacy {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/pharmacy.svg');
+                }
+                &.icon-health {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/health.svg');
+                }
+                &.icon-wic {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/wic.svg');
+                }
+                &.icon-spube {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/spube.svg');
+                }
+                &.icon-spubm {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/spubm.svg');
+                }
+                &.icon-spubh {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/spubh.svg');
+                }
+                &.icon-sprivate {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/sprivate.svg');
+                }
+                &.icon-scharter {
+                  background-image: url('./../modules/untd/explorer/point-icons/svg/scharter.svg');
+                }
+              }
+            }
+            input {
+              margin-right: 0.35rem;
+              cursor: pointer;
+              // margin-top: 10px;
+            }
+            &:first-of-type {
+              margin-top: 2rem;
+            }
+            &:last-of-type {
+              margin-top: 1rem;
+              margin-bottom: 1.5rem;
+            }
+
+            svg {
+              width: 12px;
+              height: 12px;
+              margin-left: 0.35rem;
+              color: $turtle-green;
+              margin-top: -2px;
+            }
+
+            /* Hide the browser's default checkbox */
+            input {
+              position: absolute;
+              opacity: 0;
+              cursor: pointer;
+              height: 0;
+              width: 0;
+            }
+
+            /* Create a custom checkbox */
+            .checkmark {
+              position: absolute;
+              top: 0;
+              left: 0;
+              height: 18px;
+              width: 18px;
+              background-color: #eee;
+              border-radius: 2px;
+            }
+
+            /* On mouse-over, add a grey background color */
+            // .layer:hover input ~ .checkmark {
+            //   background-color: #ccc;
+            // }
+
+            /* When the checkbox is checked, add a blue background */
+            input:checked ~ .checkmark {
+              background-color: #2c390b;
+            }
+
+            /* Create the checkmark/indicator (hidden when not checked) */
+            .checkmark:after {
+              content: '';
+              position: absolute;
+              display: none;
+            }
+
+            /* Show the checkmark when checked */
+            input:checked ~ .checkmark:after {
+              display: block;
+            }
+
+            /* Style the checkmark/indicator */
+            .checkmark:after {
+              left: 6px;
+              top: 2px;
+              width: 6px;
+              height: 11px;
+              border: solid white;
+              border-width: 0 2px 2px 0;
+              -webkit-transform: rotate(45deg);
+              -ms-transform: rotate(45deg);
+              transform: rotate(45deg);
+            }
+          }
+        }
       }
     }
+
+    // .layer {
+    //   margin: 1rem 1.2rem 0 1rem;
+
+    //   label {
+    //     cursor: pointer;
+    //   }
+    //   input {
+    //     margin-right: 0.35rem;
+    //     cursor: pointer;
+    //     // margin-top: 10px;
+    //   }
+    //   &:first-of-type {
+    //     margin-top: 2rem;
+    //   }
+    //   &:last-of-type {
+    //     margin-top: 1rem;
+    //     margin-bottom: 1.5rem;
+    //   }
+    //   svg {
+    //     width: 12px;
+    //     height: 12px;
+    //     margin-left: 0.35rem;
+    //     color: $turtle-green;
+    //     margin-top: -2px;
+    //   }
+    // }
     &.panel-hide {
       max-height: 0;
       transition: max-height 400ms ease-out;
@@ -66,90 +272,76 @@
       transition: max-height 400ms ease-in-out;
     }
   }
-  // .map-layer-toggle-btn {
-  //   width: 100%;
-  //   border-radius: 0;
-  //   background-color: #2c390b;
-  //   font-size: 1.2rem;
-  //   line-height: 1.6rem;
-  //   padding: 0.5rem;
-  //   .icon {
-  //     width: 13px;
-  //     height: 13px;
-  //     margin-top: -4px;
-  //     margin-right: 0.5rem;
-  //   }
-  // }
 }
 
-.map-panel-slideout-layers {
-  .map-layer-toggle-pane {
-    .layer {
-      display: block;
-      position: relative;
-      padding-left: 28px;
-      margin-bottom: 12px;
-      cursor: pointer;
-      // font-size: 22px;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
+// .map-panel-slideout-layers {
+//   .map-layer-toggle-pane {
+//   .layer {
+//     display: block;
+//     position: relative;
+//     padding-left: 28px;
+//     margin-bottom: 12px;
+//     cursor: pointer;
+//     // font-size: 22px;
+//     -webkit-user-select: none;
+//     -moz-user-select: none;
+//     -ms-user-select: none;
+//     user-select: none;
+//   }
 
-    /* Hide the browser's default checkbox */
-    .layer input {
-      position: absolute;
-      opacity: 0;
-      cursor: pointer;
-      height: 0;
-      width: 0;
-    }
+//   /* Hide the browser's default checkbox */
+//   .layer input {
+//     position: absolute;
+//     opacity: 0;
+//     cursor: pointer;
+//     height: 0;
+//     width: 0;
+//   }
 
-    /* Create a custom checkbox */
-    .checkmark {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 18px;
-      width: 18px;
-      background-color: #eee;
-      border-radius: 2px;
-    }
+//   /* Create a custom checkbox */
+//   .checkmark {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     height: 18px;
+//     width: 18px;
+//     background-color: #eee;
+//     border-radius: 2px;
+//   }
 
-    /* On mouse-over, add a grey background color */
-    // .layer:hover input ~ .checkmark {
-    //   background-color: #ccc;
-    // }
+//   /* On mouse-over, add a grey background color */
+//   // .layer:hover input ~ .checkmark {
+//   //   background-color: #ccc;
+//   // }
 
-    /* When the checkbox is checked, add a blue background */
-    .layer input:checked ~ .checkmark {
-      background-color: #2c390b;
-    }
+//   /* When the checkbox is checked, add a blue background */
+//   .layer input:checked ~ .checkmark {
+//     background-color: #2c390b;
+//   }
 
-    /* Create the checkmark/indicator (hidden when not checked) */
-    .checkmark:after {
-      content: '';
-      position: absolute;
-      display: none;
-    }
+//   /* Create the checkmark/indicator (hidden when not checked) */
+//   .checkmark:after {
+//     content: '';
+//     position: absolute;
+//     display: none;
+//   }
 
-    /* Show the checkmark when checked */
-    .layer input:checked ~ .checkmark:after {
-      display: block;
-    }
+//   /* Show the checkmark when checked */
+//   .layer input:checked ~ .checkmark:after {
+//     display: block;
+//   }
 
-    /* Style the checkmark/indicator */
-    .layer .checkmark:after {
-      left: 6px;
-      top: 2px;
-      width: 6px;
-      height: 11px;
-      border: solid white;
-      border-width: 0 2px 2px 0;
-      -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-      transform: rotate(45deg);
-    }
-  }
-}
+//   /* Style the checkmark/indicator */
+//   .layer .checkmark:after {
+//     left: 6px;
+//     top: 2px;
+//     width: 6px;
+//     height: 11px;
+//     border: solid white;
+//     border-width: 0 2px 2px 0;
+//     -webkit-transform: rotate(45deg);
+//     -ms-transform: rotate(45deg);
+//     transform: rotate(45deg);
+//   }
+// }
+// }
