--- a/src/styles/PanelLayerView.scss
+++ b/src/styles/PanelLayerView.scss
@@ -101,9 +101,13 @@
               cursor: pointer;
               .icon {
                 display: inline-block;
-                width: 16px;
-                height: 16px;
-                background-size: 16px 16px;
+                width: 20px;
+                height: 20px;
+                svg {
+                  width: 22px;
+                  height: 22px;
+                }
+                // background-size: 18px 18px;
                 background-repeat: no-repeat;
                 background-position: center;
                 margin-right: 9px;
