--- a/src/styles/PanelInfoView.scss
+++ b/src/styles/PanelInfoView.scss
@@ -13,7 +13,7 @@
     margin: 1rem 0;
     @include font-gotham-book;
     font-weight: 200;
-    font-size: 15px;
+    font-size: 1.4rem;
     line-height: 22px;
     color: #606b44;
     margin-bottom: 0.8rem;
