--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -46,6 +46,10 @@ $color-point-social_infrastructure: rgba(154, 85, 142, 1);
 $color-point-commerce: rgba(73, 81, 94, 1);
 $color-point-school: rgba(145, 75, 13, 1);
 $color-point-public_health: rgba(219, 134, 48, 1);
+$color-untd-gray: #626b77;
+$color-untd-darkgray: #303030;
+$color-untd-lemon: #f1f1ad;
+$color-untd-darklemon: #98980d;
 
 // _______________ SPACING _______________ //
 // space elements in increments of .8rem (8px)
