--- a/src/styles/PanelFilterView.scss
+++ b/src/styles/PanelFilterView.scss
@@ -3,20 +3,27 @@
   // height: 100%;
   overflow: hidden;
   .map-panel-slideout-filters {
+    @include font-gotham-book;
     overflow-y: hidden;
-    // h3 {
-    //   display: none;
-    // }
+    height: 100%;
+    padding: 2.8rem 2rem;
+    color: $color-untd-gray;
+    h3 {
+      font-weight: 600;
+      font-size: 1.8rem;
+      line-height: 1.8rem;
+      letter-spacing: 1%;
+      color: $color-untd-darkgray;
+    }
     p {
-      @include font-gotham-book;
       font-weight: 200;
-      font-size: 15px;
-      line-height: 22px;
-      color: #606b44;
+      font-size: 1.4rem;
+      line-height: 1.8rem;
       margin-bottom: 1.6rem;
     }
-    height: 100%;
-    padding: 2.8rem 2rem; //1.6rem;
+    .map-panel-instructions {
+      margin: 24px auto 24px auto;
+    }
     .select {
       flex-grow: 1;
       margin-right: 1rem;
@@ -25,12 +32,13 @@
         height: 40px;
         font-size: 15px;
         font-weight: 200;
-        color: #2c390b;
         background-color: #fff;
+        color: $color-untd-gray;
         border: 1px solid #cfd3c2;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding: 0 18px 0 18px;
         &.active {
           background-color: rgba(204, 204, 204, 0.4);
         }
@@ -42,40 +50,6 @@
         }
       }
     }
-    // .map-panel-controls {
-    //   display: flex;
-    //   margin-bottom: 1.6rem;
-    //   button#button_reset_filter {
-    //     width: 40px;
-    //     font-size: 1.7rem;
-    //     line-height: 1;
-    //   }
-    // .select {
-    //   flex-grow: 1;
-    //   margin-right: 1rem;
-    //   button {
-    //     width: 100%;
-    //     height: 40px;
-    //     font-size: 15px;
-    //     font-weight: 200;
-    //     color: #2c390b;
-    //     background-color: #fff;
-    //     border: 1px solid #cfd3c2;
-    //     display: flex;
-    //     justify-content: space-between;
-    //     align-items: center;
-    //     &.active {
-    //       background-color: rgba(204, 204, 204, 0.4);
-    //     }
-    //   }
-    //   .dropdown-menu {
-    //     width: 100%;
-    //     button {
-    //       border: none;
-    //     }
-    //   }
-    // }
-    // }
     .filters-panel-parent {
       overflow-y: scroll;
       height: 100%;
@@ -84,23 +58,21 @@
         margin-bottom: 20rem;
         .filter {
           h6 {
-            @include font-knockout-jr-lightweight;
-            font-weight: 300;
-            font-size: 16px;
-            line-height: 20px;
-            // letter-spacing: 0.8px;
+            font-weight: 500;
+            font-size: 1.6rem;
+            line-height: 2.2rem;
             display: flex;
             align-items: center;
             color: #2c390b;
             .indicator-tip {
               display: inline-block;
               margin-left: 6px;
-              font-size: 10px;
+              font-size: 14px;
             }
           }
-          // &:last-child {
-          //   padding-bottom: 15rem;
-          // }
+        }
+        .info {
+          margin: 14px auto 23px;
         }
       }
     }
