--- a/src/styles/tooltip.scss
+++ b/src/styles/tooltip.scss
@@ -1,15 +1,50 @@
 .tooltip {
+  @include font-gotham-book;
   z-index: 5000;
-  border-radius: 0;
+  border-radius: 4px;
   margin-left: 16px;
   .arrow {
     display: none;
   }
   .tooltip-inner {
-    background-color: #2c390b;
-    border-radius: 0;
-    font-size: 1.4rem;
     @include font-gotham-book;
-    padding: 0.8rem;
+    background-color: #2c390b;
+    border-radius: 4px;
+    font-size: 1.4rem;
+    line-height: 2.2rem;
+    padding: 0.8rem 2rem;
+  }
+}
+.tooltip-share {
+  .tooltip {
+    opacity: 1;
+    background-color: #fff;
+    .tooltip-inner {
+      background-color: #fff;
+      padding: 12px;
+      .tooltip-custom-content {
+        @include font-gotham-book;
+        text-align: left;
+        border-radius: 4px;
+        opacity: 1;
+        background-color: #fff;
+        .item {
+          button {
+            svg {
+              width: 13px;
+              height: 13px;
+              margin-right: 7.5px;
+              color: $color-untd-darkgray;
+            }
+            .btn-label,
+            span {
+              font-size: 1.3rem;
+              line-height: 2rem;
+              color: $color-untd-gray;
+            }
+          }
+        }
+      }
+    }
   }
 }
