--- a/src/styles/tooltip.scss
+++ b/src/styles/tooltip.scss
@@ -31,8 +31,9 @@
         .item {
           button {
             svg {
-              width: 13px;
-              height: 13px;
+              width: 16px;
+              height: 16px;
+              margin-top: -2px;
               margin-right: 7.5px;
               color: $color-untd-darkgray;
             }
