--- a/src/styles/PopupContent.scss
+++ b/src/styles/PopupContent.scss
@@ -4,7 +4,6 @@
   padding: 24px;
   margin: 0 !important;
   width: 252px;
-  border-radius: 0;
 
   .n-i-scale {
     margin-top: 6px;
@@ -87,7 +86,7 @@
 .mapboxgl-popup {
   // Set z-index to make tooltip overlay any other controls.
   z-index: 5000 !important;
-  border-radius: 0;
+  border-radius: 4px;
   box-shadow: 3px 3px 5px #ccc;
   // Reset padding and margins.
   padding: 0 !important;
@@ -96,7 +95,7 @@
     // Reset padding and margins.
     padding: 0 !important;
     margin: 0 !important;
-    border-radius: 0;
+    border-radius: 4px;
   }
 }
 
